--- a/.ci_support/osx_mpiopenmpi.yaml
+++ b/.ci_support/osx_mpiopenmpi.yaml
@@ -1,15 +1,17 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-build_number_decrement:
-- '1000'
 c_compiler:
-- toolchain_c
+- clang
+c_compiler_version:
+- '4'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 fortran_compiler:
-- toolchain_fort
+- gfortran
+fortran_compiler_version:
+- '4'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
@@ -21,9 +23,3 @@ openblas:
 pin_run_as_build:
   openblas:
     max_pin: x.x.x
-zip_keys:
-- - c_compiler
-  - fortran_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
